--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -11,7 +11,7 @@
     <div class="form-container">
 
       <mat-accordion>
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)">
           <mat-expansion-panel-header>
             <div class="expansion-header">
               <span class="title">
@@ -30,8 +30,7 @@
             </div>
           </mat-expansion-panel-header>
 
-          <div class="expansion-body expansion-body--customer">
-
+          <div *ngIf="!newCustomerMode; else newCustomerTemp" class="expansion-body expansion-body--customer">
             <mat-form-field class="autocomplete-input-container">
               <input type="text" matInput placeholder="Email, Phone or Last Name" [matAutocomplete]="autoCustomer" [(ngModel)]="customerFilterValue" (keyup)="customerInputChanged($event)" (focus)="customerInputChanged()">
 
@@ -49,9 +48,34 @@
 
             <button mat-button (click)="newCustomer()">NEW CUSTOMER</button>
           </div>
+
+          <ng-template #newCustomerTemp>
+            <div class="expansion-body expansion-body--customer">
+              <form class="shipping-form" #customerForm="ngForm">
+                <mat-form-field>
+                  <input type="text" matInput [(ngModel)]="selectedCustomer.firstName" placeholder="First Name" name="firstname" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input type="text" matInput [(ngModel)]="selectedCustomer.lastName" placeholder="Last Name" name="lastname" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input type="text" matInput [(ngModel)]="selectedCustomer.phone" placeholder="Phone" name="phone" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input type="text" matInput [(ngModel)]="selectedCustomer.email" placeholder="Email" name="email" required>
+                </mat-form-field>
+              </form>
+            </div>
+          </ng-template>
+
+          <div class="buttons">
+            <button mat-button (click)="newCustomerMode = false">PREVIOUS</button>
+            <button mat-button (click)="newCustomerMode ? confirmNewCustomer(customerForm.form.valid) : customerNextStep()">NEXT</button>
+          </div>
+
         </mat-expansion-panel>
 
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)">
           <mat-expansion-panel-header>
             <div class="expansion-header">
               <span class="title">
@@ -84,9 +108,14 @@
             </mat-form-field>
 
           </div>
+
+          <div class="buttons">
+            <button mat-button (click)="setStep(0)">PREVIOUS</button>
+            <button mat-button (click)="campaignNextStep()">NEXT</button>
+          </div>
         </mat-expansion-panel>
 
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)">
           <mat-expansion-panel-header>
             <div class="expansion-header">
               <span class="title">
@@ -121,48 +150,219 @@
             </mat-form-field>
 
           </div>
+
+          <ng-container *ngIf="selectedProducts && selectedProducts.length > 0">
+            <table class="highlight">
+              <thead>
+              <th>Items</th>
+              <th class="mid">Quantity</th>
+              <th class="mid">Price</th>
+              <th></th>
+              </thead>
+              <tbody>
+              <tr *ngFor="let product of selectedProducts">
+                <td>{{product.name}}</td>
+                <td class="mid">
+                  <div class="quantity-container">
+                    <mat-icon (click)="quantityMinus(product)">remove</mat-icon>
+                    <div>{{product.quantity || 1}}</div>
+                    <mat-icon (click)="quantityPlus(product)">add</mat-icon>
+                  </div>
+                </td>
+                <td class="mid">{{product.defaultPrice ? product.defaultPrice.usd() : '$0.00'}}</td>
+                <td class="mid"><mat-icon (click)="removeProduct(product)">delete</mat-icon></td>
+              </tr>
+              </tbody>
+            </table>
+          </ng-container>
+
+          <div class="buttons">
+            <button mat-button (click)="setStep(1)">PREVIOUS</button>
+            <button mat-button (click)="productNextStep()">NEXT</button>
+          </div>
+
         </mat-expansion-panel>
 
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 3" (opened)="setStep(3)">
           <mat-expansion-panel-header>
             <div class="expansion-header">
               <span class="title">
-                <div class="placeholder"></div>
+                <mat-icon *ngIf="selectedShippingAddress; else placeholder">done</mat-icon>
                 Shipping Address
               </span>
+
+              <mat-chip-list  [selectable]="false">
+                <mat-chip *ngIf="selectedShippingAddress"
+                          [removable]="true"
+                          (remove)="removeShippingAddress()">
+                  {{selectedShippingAddress.line1}}
+                  <mat-icon matChipRemove>cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-list>
             </div>
           </mat-expansion-panel-header>
+
+          <div class="expansion-body expansion-body--customer">
+
+            <form class="shipping-form" #inputForm="ngForm">
+              <div class="customer-name" *ngIf="selectedCustomer">{{selectedCustomer.firstName}} {{selectedCustomer.lastName}}</div>
+
+              <mat-form-field>
+                <input type="text" matInput [(ngModel)]="shippingAddress.line1" placeholder="Street Address 1" name="line1" required>
+              </mat-form-field>
+
+              <mat-form-field>
+                <input type="text" matInput [(ngModel)]="shippingAddress.line2" placeholder="Street Address 2 (optional)" name="line2">
+              </mat-form-field>
+
+              <mat-form-field>
+                <input type="text" matInput [(ngModel)]="shippingAddress.city" placeholder="City" required name="city">
+              </mat-form-field>
+
+              <mat-form-field>
+                <input type="text" matInput [(ngModel)]="shippingAddress.zip" placeholder="Zip" required name="zip">
+              </mat-form-field>
+
+              <mat-form-field>
+                <input type="text" matInput [(ngModel)]="shippingAddress.country" placeholder="Country" required name="country">
+              </mat-form-field>
+
+              <mat-form-field>
+                <input type="text" matInput [(ngModel)]="shippingAddress.state" placeholder="State" required name="state">
+              </mat-form-field>
+            </form>
+
+          </div>
+
+          <div class="buttons">
+            <button mat-button (click)="setStep(2)">PREVIOUS</button>
+            <button mat-button (click)="confirmShippingAddress(inputForm.form.valid)">NEXT</button>
+          </div>
         </mat-expansion-panel>
 
-
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 4" (opened)="setStep(4)">
           <mat-expansion-panel-header>
             <div class="expansion-header">
               <span class="title">
-                <div class="placeholder"></div>
+                <mat-icon *ngIf="selectedShippings && selectedShippings.length > 0; else placeholder">done</mat-icon>
                 Shipping
               </span>
+
+              <mat-chip-list  [selectable]="false">
+                <mat-chip *ngFor="let shipping of selectedShippings"
+                          [removable]="true"
+                          (remove)="removeShipping(shipping)">
+                  {{shipping.name}}
+                  <mat-icon matChipRemove>cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-list>
             </div>
           </mat-expansion-panel-header>
+
+          <div class="expansion-body expansion-body--customer">
+
+            <mat-form-field class="autocomplete-input-container">
+              <input type="text" matInput placeholder="Choose Shipping and Insurance" [matAutocomplete]="autoShipping" [(ngModel)]="shippingFilterValue" (keyup)="shippingInputChanged($event)" (focus)="shippingInputChanged()">
+
+              <mat-autocomplete class="three-row-autocomplete" #autoShipping="matAutocomplete" [displayWith]="displayFn" (optionSelected)="shippingSelected($event)">
+                <mat-option *ngFor="let shipping of filteredShippings" [value]="shipping">
+                  <div class="autocomplete-row">{{ shipping.name }} </div>
+                  <div class="autocomplete-row">{{ shipping.defaultPrice ? shipping.defaultPrice.usd() : '$0' }} </div>
+                  <div class="autocomplete-row"> One line description </div>
+                </mat-option>
+              </mat-autocomplete>
+
+            </mat-form-field>
+
+          </div>
+
+          <ng-container *ngIf="selectedShippings && selectedShippings.length > 0">
+            <table class="highlight">
+              <thead>
+              <th>Items</th>
+              <th class="mid">Quantity</th>
+              <th class="mid">Price</th>
+              <th></th>
+              </thead>
+              <tbody>
+              <tr *ngFor="let shipping of selectedShippings">
+                <td>{{shipping.name}}</td>
+                <td class="mid">
+                  <div class="quantity-container">
+                    <mat-icon (click)="quantityMinus(shipping)">remove</mat-icon>
+                    <div>{{shipping.quantity || 1}}</div>
+                    <mat-icon (click)="quantityPlus(shipping)">add</mat-icon>
+                  </div>
+                </td>
+                <td class="mid">{{shipping.defaultPrice ? shipping.defaultPrice.usd() : '$0.00'}}</td>
+                <td class="mid"><mat-icon (click)="removeShipping(shipping)">delete</mat-icon></td>
+              </tr>
+              </tbody>
+            </table>
+          </ng-container>
+
+          <div class="buttons">
+            <button mat-button (click)="setStep(3)">PREVIOUS</button>
+            <button mat-button (click)="shippingNextStep()">NEXT</button>
+          </div>
         </mat-expansion-panel>
 
-
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 5" (opened)="setStep(5)">
           <mat-expansion-panel-header>
             <div class="expansion-header">
               <span class="title">
-                <div class="placeholder"></div>
+                <mat-icon *ngIf="selectedCreditCard; else placeholder">done</mat-icon>
                 Billing
               </span>
+
+              <mat-chip-list [selectable]="false">
+                <mat-chip *ngIf="selectedCreditCard"
+                          [removable]="true"
+                          (remove)="removeCreditCard()">
+                  ****{{selectedCreditCard.lastFour}}
+                  <mat-icon matChipRemove>cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-list>
             </div>
           </mat-expansion-panel-header>
+
+          <mat-radio-group [selected]="false">
+            <table *ngIf="selectedCustomer && selectedCustomer.creditCards && selectedCustomer.creditCards.length > 0" class="highlight">
+              <thead>
+                <th></th>
+                <th>Card</th>
+                <th>Exp. Date</th>
+                <th>Last used</th>
+                <th></th>
+              </thead>
+              <tbody>
+                <tr *ngFor="let ccard of selectedCustomer.creditCards">
+                  <td><mat-radio-button (change)="ccChanged($event)" [value]="ccard"></mat-radio-button></td>
+                  <td>{{ccard.type}} ****{{ccard.lastFour}}</td>
+                  <td>{{ccard.expirationFormatted}}</td>
+                  <td></td>
+                  <td><mat-icon>delete</mat-icon><mat-icon>edit</mat-icon></td>
+                </tr>
+              </tbody>
+            </table>
+
+            <div class="new-card">
+              <mat-radio-button (change)="newCardSelected()"></mat-radio-button>
+              <button mat-button>NEW CARD</button>
+            </div>
+          </mat-radio-group>
+
+          <div class="buttons">
+            <button mat-button (click)="setStep(4)">PREVIOUS</button>
+            <button mat-button (click)="billingNextStep()">DONE</button>
+          </div>
         </mat-expansion-panel>
       </mat-accordion>
 
     </div>
 
     <div class="details">
-      <create-order-summary></create-order-summary>
+      <create-order-summary [price]="getPrice()" [shipping]="getShipping()" [total]="getTotal()"></create-order-summary>
       <div class="cancel" (click)="close.emit(true)">
         <div>CANCEL ORDER</div>
       </div>
