--- a/src/app/pages/customer-service-page/customer-service-pair/customer-service-pair.component.html
+++ b/src/app/pages/customer-service-page/customer-service-pair/customer-service-pair.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <customer-service-customer class="item" [customer]="customer"></customer-service-customer>
-  <customer-service-order class="item" [customerId]="customerId"></customer-service-order>
+  <customer-service-order class="item" [customerId]="customerId" [session]="session"></customer-service-order>
 </div>
