--- a/src/app/shared/components/payment-form/payment-form.component.html
+++ b/src/app/shared/components/payment-form/payment-form.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
 
     <mat-form-field [class.error]="formInvalid && ccvInvalid(creditCard)">
-      <input type="text" required matInput (keydown)="isAllowedNumericKey($event)" [(ngModel)]="creditCard.ccv" placeholder="{{'FORMINPUTS_CREDITCARD_CCV' | translate}}">
+      <input type="text" matInput (keydown)="isAllowedNumericKey($event)" [(ngModel)]="creditCard.ccv" placeholder="{{'FORMINPUTS_CREDITCARD_CCV' | translate}}">
     </mat-form-field>
 
     <div class="row">
