--- a/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
+++ b/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
@@ -1,21 +1,21 @@
 <mat-card>
-  <div>Order Summary</div>
-  <div>{{utcf().tz(authService.getTimezone()).format('MMMM D, YYYY')}}</div>
+  <div class="title">Order Summary</div>
+  <div class="date">{{utcf().tz(authService.getTimezone()).format('MMMM D, YYYY')}}</div>
 
   <div class="customer-info-container">
     <div class="shipping">
-      <div>Shipping Address</div>
+      <div class="header">Shipping Address</div>
 
       <div>{{customer.firstName}} {{customer.lastName}}</div>
-      <div>{{shippingAdderss.line1}}</div>
-      <div *ngIf="shippingAdderss.line2">{{shippingAdderss.line2}}</div>
-      <div>{{shippingAdderss.city}}, {{shippingAdderss.state}} {{shippingAdderss.zip}}</div>
-      <div>{{shippingAdderss.country}}</div>
+      <div>{{shippingAddress.line1}}</div>
+      <div *ngIf="shippingAddress.line2">{{shippingAddress.line2}}</div>
+      <div>{{shippingAddress.city}}, {{shippingAddress.state}} {{shippingAddress.zip}}</div>
+      <div>{{shippingAddress.country}}</div>
     </div>
 
     <div class="payment">
-      <div>Payment Method</div>
-      <div>{{creditCard.getType()}} ****{{creditCard.lastFour}}</div>
+      <div class="header">Payment Method</div>
+      <div class="card">{{creditCard.getType()}} ****{{creditCard.lastFour}}</div>
 
       <div class="summary">
         <div class="summary__column">
