--- a/src/app/orders/create-order/create-order-preview/create-order-preview.component.scss
+++ b/src/app/orders/create-order/create-order-preview/create-order-preview.component.scss
@@ -2,23 +2,49 @@ mat-card {
   margin-bottom: 0;
 }
 
+.title {
+  font-size: 22px;
+  margin-bottom: 4px;
+}
+
+.date {
+  font-size: 14px;
+  margin-bottom: 20px;
+  color: rgba(0,0,0,0.5);
+}
+
 .customer-info-container {
   display: flex;
+  font-size: 14px;
+  color: rgba(0,0,0,0.8);
+
+  div {
+    line-height: 22px;
+  }
+
+  .header {
+    font-weight: 500;
+  }
+
+  .card {
+    text-transform: capitalize;
+    margin-bottom: 22px;
+  }
 
   .shipping {
-    margin-right: 35px;
+    margin-right: 80px;
   }
 
   .payment {
 
   }
-}
 
-.summary {
-  display: flex;
+  .summary {
+    display: flex;
 
-  &__column {
-    margin-right: 10px;
+    &__column {
+      margin-right: 10px;
+    }
   }
 }
 
