--- a/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
+++ b/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
@@ -53,4 +53,4 @@
   </div>
 </mat-card>
 
-<button mat-button>SUBMIT THIS ORDER</button>
+<button mat-button (click)="confirm.emit(true)">SUBMIT THIS ORDER</button>
