Validation for notification apps and devices inputs.

--- a/src/app/pages/profile-page/notification-devices/device-toggle-item/device-toggle-item.component.html
+++ b/src/app/pages/profile-page/notification-devices/device-toggle-item/device-toggle-item.component.html
@@ -18,7 +18,7 @@
 
     <ng-template #edit>
       <div class="label">{{deviceLabels[notificationSettings.name]}}</div>
-      <mat-input-container class="mrw-input--no-margin-top">
+      <mat-input-container [class.error]="formInvalid" class="mrw-input--no-margin-top">
         <input #valueInput auto-focus (blur)="updateData()" [applyAutofocus]="true" matInput type="text" [value]="notificationSettings.data">
       </mat-input-container>
     </ng-template>
