Integrate transactional api

--- a/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
+++ b/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
@@ -24,9 +24,9 @@
           <div>Total</div>
         </div>
         <div class="summary__column">
-          <div>$0</div>
-          <div>$0</div>
-          <div>$0</div>
+          <div>{{getPrice().usd()}}</div>
+          <div>{{getShipping().usd()}}</div>
+          <div>{{getTotal().usd()}}</div>
         </div>
       </div>
     </div>
