--- a/src/app/orders/create-order/create-order.component.scss
+++ b/src/app/orders/create-order/create-order.component.scss
@@ -3,8 +3,12 @@
   font-family: Roboto, sans-serif;
 
   .header {
-    padding: 40px 15px;
+    padding: 40px 25px;
     background: #4478BD;
+
+    &--complete {
+      background: #1DBDA5;
+    }
 
     div {
       font-size: 28px;
@@ -17,12 +21,12 @@
   }
 
   .form-container {
-    margin: 15px;
+    margin: 25px;
     width: calc(100% - 250px);
   }
 
   .details {
-    margin: 15px;
+    margin: 25px 25px 25px 0;
     width: 250px;
   }
 
