--- a/src/app/pages/search-page/advanced-search/advanced-search.component.html
+++ b/src/app/pages/search-page/advanced-search/advanced-search.component.html
@@ -4,64 +4,64 @@
 
     <div class="advanced-search__content__fields">
       <div class="advanced-search__content__fields__column">
-        <mat-input-container>
-          <input matInput #firstInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_FIRSTNAME' | translate}}" [(ngModel)]="searchOptions.firstname">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput #firstInput placeholder="{{'SEARCH_ADVANCED_FIRSTNAME' | translate}}" [(ngModel)]="searchOptions.firstname">
         </mat-input-container>
 
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_LASTNAME' | translate}}" [(ngModel)]="searchOptions.lastname">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_LASTNAME' | translate}}" [(ngModel)]="searchOptions.lastname">
         </mat-input-container>
 
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_PHONE' | translate}}" [(ngModel)]="searchOptions.phone">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_PHONE' | translate}}" [(ngModel)]="searchOptions.phone">
         </mat-input-container>
 
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_EMAIL' | translate}}" [(ngModel)]="searchOptions.email">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_EMAIL' | translate}}" [(ngModel)]="searchOptions.email">
         </mat-input-container>
 
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_TRACKINGNUMBER' | translate}}" [(ngModel)]="searchOptions.tracking_number">
-        </mat-input-container>
-      </div>
-
-      <div class="advanced-search__content__fields__column">
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ADDRESS1' | translate}}" [(ngModel)]="searchOptions.address_line_1">
-        </mat-input-container>
-
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ADDRESS2' | translate}}" [(ngModel)]="searchOptions.address_line_2">
-        </mat-input-container>
-
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CITY' | translate}}" [(ngModel)]="searchOptions.city">
-        </mat-input-container>
-
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ZIP' | translate}}" [(ngModel)]="searchOptions.zip">
-        </mat-input-container>
-
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_STATE' | translate}}" [(ngModel)]="searchOptions.state">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_TRACKINGNUMBER' | translate}}" [(ngModel)]="searchOptions.tracking_number">
         </mat-input-container>
       </div>
 
       <div class="advanced-search__content__fields__column">
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_ALIAS' | translate}}" [(ngModel)]="searchOptions.alias">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_ADDRESS1' | translate}}" [(ngModel)]="searchOptions.address_line_1">
         </mat-input-container>
 
-        <mat-input-container>
-          <input matInput [disabled]="true" class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCTYPE' | translate}}" [(ngModel)]="searchOptions.cctype">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_ADDRESS2' | translate}}" [(ngModel)]="searchOptions.address_line_2">
         </mat-input-container>
 
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCF6' | translate}}" [(ngModel)]="searchOptions.first_six">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_CITY' | translate}}" [(ngModel)]="searchOptions.city">
         </mat-input-container>
 
-        <mat-input-container>
-          <input matInput class="advanced-search__content__fields__input" placeholder="{{'SEARCH_ADVANCED_CCL4' | translate}}" [(ngModel)]="searchOptions.last_four">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_ZIP' | translate}}" [(ngModel)]="searchOptions.zip">
+        </mat-input-container>
+
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_STATE' | translate}}" [(ngModel)]="searchOptions.state">
+        </mat-input-container>
+      </div>
+
+      <div class="advanced-search__content__fields__column">
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_ALIAS' | translate}}" [(ngModel)]="searchOptions.alias">
+        </mat-input-container>
+
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput [disabled]="true" placeholder="{{'SEARCH_ADVANCED_CCTYPE' | translate}}" [(ngModel)]="searchOptions.cctype">
+        </mat-input-container>
+
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_CCF6' | translate}}" [(ngModel)]="searchOptions.first_six">
+        </mat-input-container>
+
+        <mat-input-container class="advanced-search__content__fields__input">
+          <input matInput placeholder="{{'SEARCH_ADVANCED_CCL4' | translate}}" [(ngModel)]="searchOptions.last_four">
         </mat-input-container>
       </div>
 
