--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -29,8 +29,8 @@
   <registration-form></registration-form>
 </div>
 
-<div *ngIf="navigation.showCreateNewModal | async" class="create-order-modal-container">
-  <create-order (close)="navigation.setShowCreateNewModal(false)"></create-order>
+<div *ngIf="navigation.showCreateNewOrderModal | async" class="create-order-modal-container">
+  <create-order (close)="navigation.setShowCreateNewOrderModal(false)"></create-order>
 </div>
 
 <div *ngIf="navigation.showProcessingOrderOverlay | async" class="processing-order-overlay">
